--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* src/index.css */
+
+/* CSS Reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -11,87 +14,80 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
+  font-family: 'Overpass', sans-serif;
 }
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
+
+#zpcookie-banner {
+  display: none;
+}
+
+
 @font-face {
-	font-family: 'Syne-medium';
-	src: url('../src/assets/fonts/Syne-Medium.ttf') format('woff2'),
-		 url('../src/assets/fonts/Syne-Medium.ttf') format('woff');
-	
-  }
-  
+  font-family: 'Overpass';
+  src: url('./assets/fonts/overpass-medium.woff2') format('woff2'),
+       url('./assets/fonts/overpass-medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
 
-  @font-face {
-	font-family: 'Syne-bold';
-	src: url('../src/assets/fonts/Syne-Bold.ttf') format('woff2'),
-		 url('../src/assets/fonts/Syne-Bold.ttf') format('woff');
-	
-  }
+@font-face {
+  font-family: 'Overpass';
+  src: url('./assets/fonts/overpass-SemiBold.woff2') format('woff2'),
+       url('./assets/fonts/overpass-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
 
+@font-face {
+  font-family: 'Overpass';
+  src: url('./assets/fonts/overpass-bold.woff2') format('woff2'),
+       url('./assets/fonts/overpass-bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
-  @font-face {
-	font-family: 'Syne-regular';
-	src: url('../src/assets/fonts/Syne-Regular.ttf') format('woff2'),
-		 url('../src/assets/fonts/Syne-Regular.ttf') format('woff');
-	
-  }
+/* Apply Fonts Globally */
+body {
+  font-family: 'Overpass', sans-serif;
+}
 
-  @font-face {
-	font-family: 'Overpass-medium';
-	src: url('../src/assets/fonts/Overpass-Medium.ttf') format('woff2'),
-		 url('../src/assets/fonts/Overpass-Medium.ttf') format('woff');
-	
-  }
-  @font-face {
-	font-family: 'Overpass-bold';
-	src: url('../src/assets/fonts/Overpass-SemiBold.ttf') format('woff2'),
-		 url('../src/assets/fonts/Overpass-SemiBold.ttf') format('woff');
-	
-  }
-  @font-face {
-	font-family: 'Overpass-black';
-	src: url('../src/assets/fonts/Overpass-Bold.ttf') format('woff2'),
-		 url('../src/assets/fonts/Overpass-Bold.ttf') format('woff');
-	
-  }
+h1, h2, h3 {
+  font-family: 'Overpass', sans-serif;
+  font-weight: 700;
+}
 
-  /* Apply fonts globally */
-  body {
-	font-family: "Overpass-medium";
-  }
-  
-  h1, h2, h3 {
-	font-family: 'Syne-bold';
-  }
-  
-  html {
-	scroll-behavior: smooth;
-  }
+html {
+  scroll-behavior: smooth;
+}
