fix sitemap google search console

--- a/src/pages/WebDevelopment.css
+++ b/src/pages/WebDevelopment.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../assets/images/bg.jpg'); /* Update with your hero image */
+  background-image: url('../assets/images/bg.webp'); /* Update with your hero image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
